Update personal year descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -239,15 +239,18 @@
         };
 
         const personalYearText = {
-            1: "Tahun Awal Baru: Waktu untuk menanam benih, memulai proyek, dan bertindak mandiri.",
-            2: "Tahun Kemitraan: Waktu untuk bersabar, bekerja sama, dan menunggu hasil benih.",
-            3: "Tahun Ekspresi: Waktu untuk bersosialisasi, kreatif, dan bersenang-senang.",
-            4: "Tahun Kerja Keras: Waktu untuk membangun fondasi, berhemat, dan disiplin.",
-            5: "Tahun Perubahan: Waktu untuk kebebasan, travel, dan kejutan tak terduga.",
-            6: "Tahun Keluarga: Waktu untuk tanggung jawab rumah tangga dan hubungan.",
-            7: "Tahun Introspeksi: Waktu untuk menyendiri, belajar, dan evaluasi spiritual.",
-            8: "Tahun Pencapaian: Waktu untuk panen karir, uang, dan kekuasaan.",
-            9: "Tahun Penyelesaian: Waktu untuk melepaskan yang lama dan bersiap untuk siklus baru."
+            1: "Personal Year 1: Dengan energi perintis yang kuat, tema tahun ini adalah kemandirian dan inisiatif baru, di mana Anda harus mengatasi tantangan keraguan untuk melangkah sendirian dengan kunci sukses mengambil tindakan berani demi menanam benih siklus sembilan tahun ke depan.",
+            2: "Personal Year 2: Didominasi energi pasif yang menuntut kesabaran, tema tahun ini adalah diplomasi dan kemitraan, yang menantang Anda untuk tidak merasa frustrasi saat kemajuan melambat, dengan kunci sukses menjaga keharmonisan relasi sambil menunggu waktu yang tepat.",
+            3: "Personal Year 3: Membawa energi ekspresif yang ceria, tema tahun ini adalah kreativitas dan sosialisasi, di mana tantangan hilangnya fokus akibat terlalu banyak kesenangan harus diatasi dengan kunci sukses menyalurkan bakat seni serta memperluas jaringan pertemanan dengan optimisme.",
+            4: "Personal Year 4: Mengusung energi praktis yang kaku, tema tahun ini adalah pembangunan fondasi dan ketertiban, yang menghadirkan tantangan rasa lelah atau terkekang oleh rutinitas, namun dapat ditaklukkan dengan kunci sukses disiplin kerja keras serta perhatian penuh pada detail teknis.",
+            5: "Personal Year 5: Penuh dengan energi kebebasan yang eksplosif, tema tahun ini adalah perubahan mendadak dan petualangan, di mana tantangan ketidakstabilan impulsif harus diredam dengan kunci sukses bersikap fleksibel serta berani beradaptasi keluar dari zona nyaman.",
+            6: "Personal Year 6: Mengalirkan energi pengasuhan yang hangat, tema tahun ini berpusat pada tanggung jawab keluarga dan pernikahan, yang mungkin terasa membebani emosi pribadi, namun akan berhasil jika Anda menerapkan kunci sukses melayani orang lain dengan cinta kasih dan komitmen tulus.",
+            7: "Personal Year 7: Membawa energi spiritual yang tenang, tema tahun ini adalah introspeksi diri dan analisis mendalam, di mana tantangan rasa kesepian atau isolasi harus dihadapi dengan kunci sukses memanfaatkan waktu sendirian (solitude) untuk belajar, berdoa, atau mengevaluasi makna hidup.",
+            8: "Personal Year 8: Memancarkan energi otoritas yang kuat, tema tahun ini adalah pencapaian materi dan karir, yang menguji Anda dengan tantangan ambisi berlebihan atau keserakahan, namun menjanjikan panen raya jika menggunakan kunci sukses pengelolaan manajemen yang efisien dan etis.",
+            9: "Personal Year 9: Menandai energi penyelesaian siklus, tema tahun ini adalah pelepasan dan transformasi akhir, di mana tantangan sulitnya move on dari keterikatan lama harus diselesaikan dengan kunci sukses memaafkan masa lalu dan membersihkan hidup dari hal yang tak lagi berguna.",
+            11: "Personal Year 11/2: Sebagai tahun master berenergi pencerahan tinggi, temanya adalah inspirasi spiritual dan intuisi tajam, yang membawa tantangan ketegangan saraf atau kecemasan berlebih, namun dapat dimenangkan dengan kunci sukses mempercayai firasat batin sambil tetap membumi dalam realitas.",
+            22: "Personal Year 22/4: Membawa energi "Pembangun Agung" yang dahsyat, tema tahun ini adalah mewujudkan visi idealis berskala besar menjadi nyata, di mana tantangan tekanan beban kerja yang sangat berat harus dikelola dengan kunci sukses menggabungkan strategi visioner dan kerja praktis yang sistematis.",
+            33: "Personal Year 33/6: Memancarkan energi pelayanan universal yang langka, tema tahun ini adalah pengorbanan penuh kasih untuk orang banyak, yang menantang batas kekuatan emosional Anda, namun memberi kepuasan jiwa melalui kunci sukses melayani kemanusiaan tanpa mengharap pamrih pribadi.",
         };
 
         // --- UTILS ---
