--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 <body>
 
-    <a href="index.html" style="color: var(--gold-light); text-decoration: none; align-self: flex-start; margin-bottom: 20px;">← Kembali ke Beranda</a>
+    <a href="https://fauzantarot.github.io/" style="color: var(--gold-light); text-decoration: none; align-self: flex-start; margin-bottom: 20px;">← Kembali ke Beranda</a>
 
     <div class="container">
         <h1>Deep Numerology Profile</h1>
